--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -1,24 +1,22 @@
-<div id="wrapper" class="style1">
-	<div id="content">
-		<p class="title"><%= image_tag("images/title2.gif", width: "157", height: "16") %></p>
-		<%= image_tag("images/spacer.gif", width: "368", height: "37") %><br />							
-		<div id="left">
-			<div class="block">
-				<span>17 december</span><br />
-				<p>Lorem ipsum dolor sit amet, sectetu adip scing varius interdum incid unt quis, libero. Aenean mturpis. Maecenas hendrerit masa laoreet iaculipede mnisl ulamcorper.
-				<%= link_to("#", {class: "more"}) do%>
-					<p>more info</p>
-				<% end %></p>
-			</div>
-		</div>
-		<div id="left">
-			<div class="block">
-				<span>17 december</span><br />
-				<p>Lorem ipsum dolor sit amet, sectetu adip scing varius interdum incid unt quis, libero. Aenean mturpis. Maecenas hendrerit masa laoreet iaculipede mnisl ulamcorper.
-				<%= link_to("#", {class: "more"}) do%>
-					<p>more info</p>
-				<% end %></p>
-			</div>
-		</div>
-	</div>
+<div>
+	<table class="rwd-table stats-table">
+		<tr id="firstrow">
+			<th>Date</th>
+			<th>Opponent</th>
+			<th>Home/Away</th>
+			<th>Win/Loss</th>
+			<th>Goals</th>
+			<th>Assists</th>
+			<th>Saves</th>
+		</tr>
+		<tr>
+			<td>08.24.15</td>
+			<td>University of North Alabama</td>
+			<td>Away</td>
+			<td>Win</td>
+			<td>Daniel Jones: 1, Jack Bailey: 1</td>
+			<td>Leander Rabe: 1, Puran Ale: 1</td>
+			<td>Richard Mejia: 14</td>
+		</tr>
+	</table>
 </div>
