--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,57 +16,60 @@
   
   </script>
 </head>
-<body>
-<%= render "layouts/messages"%>
-<div id="top">
-	<div id="menu">
-		<ul>
-			<li>
-				<%= link_to root_path, {class: "but1", id: is_active?("main", "pages") } do%>
-					<%=image_tag("images/spacer.gif", width: "56", height: "13")%>
-				<% end %>
-			</li>
-			<li>
-				<%= link_to aboutus_path, {class: "but2", id: is_active?("aboutus", "pages")} do%>
-					<%=image_tag("images/spacer.gif", width: "100", height: "13")%>
-				<% end %>
-			</li>
-			<li>
-				<%= link_to users_path, {class: "but3", id: is_active?("index", "users")} do%>
-					<%=image_tag("images/spacer.gif", width: "74", height: "13")%>
-				<% end %>
-			</li>
-			
-			<li>
-				<%= link_to stats_path, {class: "but5", id: is_active?("stats", "pages")} do%>
-					<%=image_tag("images/spacer.gif", width: "88", height: "13")%>
-				<% end %>
-			</li>
-			
-			<li>
-				<%= link_to contactus_path, {class: "but7", id: is_active?("contactus", "pages")} do%>
-					<%=image_tag("images/spacer.gif", width: "84", height: "13")%>
-				<% end %>
-			</li>
-		</ul>								
+<body class="col-md-12">
+<div id="forfooter">
+	<%= render "layouts/messages"%>
+	<div id="top" class="col-md-offset-2">
+		<div id="menu">
+			<ul>
+				<li>
+					<%= link_to calendar_path, {class: "but4", id: is_active?("calendar", "pages")} do%>
+						<%=image_tag("images/spacer.gif", width: "123", height: "13")%>
+					<% end %>
+				</li>
+
+				<li>
+					<%= link_to stats_path, {class: "but5", id: is_active?("stats", "pages")} do%>
+						<%=image_tag("images/spacer.gif", width: "88", height: "13")%>
+					<% end %>
+				</li>
+				
+				<li>
+					<%= link_to root_path, {class: "logo"} do%>
+						<%=image_tag("images/logo.png", width: "100", height: "53")%>
+					<% end %>
+				</li>				
+
+				<li>
+					<%= link_to users_path, {class: "but3", id: is_active?("index", "users")} do%>
+						<%=image_tag("images/spacer.gif", width: "74", height: "13")%>
+					<% end %>
+				</li>
+				
+				<li>
+					<%= link_to contactus_path, {class: "but7", id: is_active?("contactus", "pages")} do%>
+						<%=image_tag("images/spacer.gif", width: "84", height: "13")%>
+					<% end %>
+				</li>
+			</ul>								
+		</div>
+	</div>
+	<div id="header" class="home">
+		<br />	
 	</div>
 
-</div>
-<div id="header" class="home">
-	<br />	
+	<div id='changingpart'>
+		<%= yield %>
+	</div>
+	<div class="push"></div>
 </div>
 
-<div id='changingpart'>
-	<%= yield %>
-</div>
-<div class="push"></div>
-
-
-<div id="footer">
+<footer id="myfooter">
 	<ul>
 		Sponsor logos will be listed in here.
 	</ul>
+	<p>Website is created by <%= link_to "Yhlas Jorayev", "https://www.linkedin.com/in/yhlas-jorayev-495190b3", target: "blank"%></p>
 	<p>Copyright &copy;. All rights reserved. Design is edited version of this link. <a href="http://www.bestfreetemplates.info" target="_blank" title="Best Free Templates">BFT</a></p>				
-</div>
+</footer>
 </body>
 </html>
