--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,5 +1,5 @@
 <div id="left" class="row";>
-	<h3 style="color: yellow">Player of the Week</h3>
+	<h3 style="color: #AB2C2C">Player of the Week</h3>
 	<%= image_tag("images/jack.jpg", wiph: "180", height: "250") %><br />
 
 	<dl class= "dl-horizontal text-left">
