add score column

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Soccer</title>
+  <title>Troy University Men's Fútbol Club</title>
+  <meta name="Troy University Men's Fútbol Club" content="Troy University Men's Fútbol Club, Soccer Club, NIRSA, College Soccer">
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js", "application" %>  
   <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/redmond/jquery-ui.css", "application" %>
 
