--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -5,6 +5,7 @@
 			<th>Opponent</th>
 			<th>Home/Away</th>
 			<th>Win/Loss</th>
+			<th>Score</th>
 			<th>Goals</th>
 			<th>Assists</th>
 			<th>Saves</th>
@@ -14,6 +15,7 @@
 			<td>University of North Alabama</td>
 			<td>Away</td>
 			<td>Win</td>
+			<td>2:0</td>
 			<td>Daniel Jones: 1, Jack Bailey: 1</td>
 			<td>Leander Rabe: 1, Puran Ale: 1</td>
 			<td>Richard Mejia: 14</td>
