--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,6 +1,6 @@
 <div id="picture">
 	<h3 style="color: #AB2C2C">Troy University Men's Fútbol Club</h3>
-	<%=image_tag("images/team.jpg")%>s
+	<%=image_tag("images/team.jpg")%>
 </div>
 <div class="container">
 	<br />
